# tth-cpv-observable-ilc

./: .gitignore  KNOWN_ISSUES.md  LICENSE  README.md  pyproject.toml
condor/: README.md
condor/example/: job_wrapper.sh  make_arguments.py  submit_kinfit.sub
configs/: analysis_ow_lr.yaml  analysis_ow_rl.yaml  lcf_polarization.yaml  model_profiles.yaml  paths.template.yaml  samples.yaml
docs/: BACKGROUND_INTERFACE.md  CODE_PROVENANCE.md  DATA_SCHEMA.md  DEPENDENCY_AND_MODEL_POLICY.md  KINFIT_JET_ASSIGNMENT.md  MVA_INTERFACE.md  NAF_STUDENT_SETUP.md  PHYSICS_CONVENTIONS.md  PROJECT_NOTE.md  PROJECT_NOTE_FULL.md  SAMPLE_PROVENANCE.md
env/: check_environment.sh  environment_notes.md  requirements.txt  setup.sh
notebooks/: README.md
outputs/: README.md
scripts/: apply_polarization_weights.py  build_angular_observable.py  build_ml_observable.py  check_model_profile.py  evaluate_fisher.py  export_features.py  inspect_generator_event.py  inspect_reco_event.py  join_selection_mva.py  merge_slcio.sh  run_baseline.sh  run_kinfit_assignment.sh  split_slcio.sh  train_cpv_model.py  validate_kinfit_root.py
src/ilc_tth_cpv/: __init__.py  angles.py  dependencies.py  features.py  fisher.py  flavor.py  frames.py  histograms.py  io.py  (+8 more)
steering/: tth_semilep_kinfit.xml
templates/: feature_export_template.py  fisher_template.py  generator_reader_template.py  model_training_template.py  reco_reader_template.py
tests/: test_angles.py  test_event_matching.py  test_fisher.py  test_flavor.py  test_frames.py  test_normalization.py  test_polarization.py  test_weights.py
