[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ilc-tth-cpv"
version = "0.2.0"
description = "Student-facing ttH CPV angular and ML analysis framework for DESY NAF"
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "PyYAML",
]

[project.optional-dependencies]
baseline-ml = ["xgboost"]
classical-ml = ["scikit-learn", "catboost", "xgboost", "lightgbm"]
plot = ["matplotlib"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
